AigisEXP.html add expS02
css format

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -35,9 +35,9 @@
 
       <div class="card" id="expcalc">
         <!-- card box -->
-        <div class="box" style="background-color: #fff0d2;padding: 10px;margin: 0px;">
+        <div class="box" style="background-color: #fff0d2; padding: 10px; margin: 0px;">
           <!-- set box -->
-          <div style="width: 70%;float: left;">
+          <div style="width: 70%; float: left;">
 
             <div class="box setlv">
               <select id="selectRarity" onchange="changeSelectRarity();" style="width: 360px;">
@@ -97,10 +97,10 @@
           </div>
 
           <!-- show box -->
-          <div style="width: 30%;float: right;">
-            <div class="box" style="background-color: rgba(255, 255, 255, 0.70);padding: 5px;margin-top: 20px;">
+          <div style="width: 30%; float: right;">
+            <div class="box" style="background-color: rgba(255, 255, 255, 0.70); padding: 5px; margin-top: 20px;">
               必要経験値：
-              <div id="necessaryEXP" style="font-size: 20px;font-weight: bold;">-</div>
+              <div id="necessaryEXP" style="font-size: 20px; font-weight: bold;">-</div>
             </div>
           </div>
 
@@ -108,13 +108,13 @@
 
 
         <!-- Training box -->
-        <div class="box" style="background-color: #417cb4;color: #ffffff;padding: 10px;margin: 10px 0px 0px 0px;">
+        <div class="box" style="background-color: #417cb4; color: #ffffff; padding: 10px; margin: 10px 0px 0px 0px;">
           <!-- eat box -->
-          <div style="width: 70%;float: left;">
+          <div style="width: 70%; float: left;">
 
             <!-- title -->
             <div class="box">
-              <div id="boxtitle" style="font-size: 18px;font-weight: bold;">育成計画</div>
+              <div id="boxtitle" style="font-size: 18px; font-weight: bold;">育成計画</div>
               <label for="checkSariette" style="user-select: none;">
                 <input type="checkbox" id="checkSariette" onchange="switchSariette(); calc();">
                 育成の聖霊サリエット
@@ -158,7 +158,7 @@
             <div class="accContent">
 
               <div class="box training" id="expAmour">
-                <div class="box1">アムール<div style="float: right; margin-right: 7px;">小祝福の聖霊(銀)</div>
+                <div class="box1">アムール<div class="boxnote">小祝福の聖霊(銀)</div>
                 </div>
                 <div class="box2">4000</div>
                 <div class="box3">
@@ -169,7 +169,7 @@
               </div>
 
               <div class="box training" id="expPreseil">
-                <div class="box1">プレジール<div style="float: right; margin-right: 7px;">小祝福の聖霊(金)</div>
+                <div class="box1">プレジール<div class="boxnote">小祝福の聖霊(金)</div>
                 </div>
                 <div class="box2">1750</div>
                 <div class="box3">
@@ -180,7 +180,7 @@
               </div>
 
               <div class="box training" id="expAlegria">
-                <div class="box1">アレグリア<div style="float: right; margin-right: 7px;">小祝福の聖霊(金)</div>
+                <div class="box1">アレグリア<div class="boxnote">小祝福の聖霊(金)</div>
                 </div>
                 <div class="box2">18000</div>
                 <div class="box3">
@@ -191,7 +191,7 @@
               </div>
 
               <div class="box training" id="expLiebe">
-                <div class="box1">リーベ<div style="float: right; margin-right: 7px;">小祝福の聖霊(蒼)</div>
+                <div class="box1">リーベ<div class="boxnote">小祝福の聖霊(蒼)</div>
                 </div>
                 <div class="box2">19000</div>
                 <div class="box3">
@@ -202,7 +202,7 @@
               </div>
 
               <div class="box training" id="expFreude">
-                <div class="box1">フロイデ<div style="float: right; margin-right: 7px;">小祝福の聖霊(白)</div>
+                <div class="box1">フロイデ<div class="boxnote">小祝福の聖霊(白)</div>
                 </div>
                 <div class="box2">19000</div>
                 <div class="box3">
@@ -213,7 +213,7 @@
               </div>
 
               <div class="box training" id="expFarah">
-                <div class="box1">ファラハ<div style="float: right; margin-right: 7px;">小祝福の聖霊(黒)</div>
+                <div class="box1">ファラハ<div class="boxnote">小祝福の聖霊(黒)</div>
                 </div>
                 <div class="box2">20000</div>
                 <div class="box3">
@@ -224,7 +224,7 @@
               </div>
 
               <div class="box training" id="expPresent">
-                <div class="box1">プレーゼ<div style="float: right; margin-right: 7px;">小祝福の聖霊</div>
+                <div class="box1">プレーゼ<div class="boxnote">小祝福の聖霊</div>
                 </div>
                 <div class="box2">18000</div>
                 <div class="box3">
@@ -235,7 +235,7 @@
               </div>
 
               <div class="box training" id="expPlacer">
-                <div class="box1">プラセル<div style="float: right; margin-right: 7px;">小祝福の聖霊</div>
+                <div class="box1">プラセル<div class="boxnote">小祝福の聖霊</div>
                 </div>
                 <div class="box2">10000</div>
                 <div class="box3">
@@ -249,7 +249,7 @@
 
 
             <!-- plane2 -->
-            <div class="box boxswitch" style="background-color: #C0C0C0;color: #000000;">
+            <div class="box boxswitch" style="background-color: #C0C0C0; color: #000000;">
               <label for="Panel2">
                 <b>白の皇帝</b>
               </label>
@@ -299,7 +299,7 @@
             <input type="checkbox" id="Panel3" class="on-off">
             <div class="accContent">
 
-              <div class="box training showh43" id="expB01">
+              <div class="box training showh1" id="expB01">
                 <div class="box1">ブロンズ(Lv34)<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊ダークエルフの女王 /＊オークの勇士</div>
                 </div>
@@ -311,7 +311,7 @@
                 </div>
               </div>
 
-              <div class="box training showh43" id="expB02">
+              <div class="box training showh1" id="expB02">
                 <div class="box1">ﾌﾞﾛﾝｽﾞ(Lv34) + ベテランの指南<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊ダークエルフの女王 /＊オークの勇士</div>
                 </div>
@@ -323,7 +323,7 @@
                 </div>
               </div>
 
-              <div class="box training showh43" id="expB03">
+              <div class="box training showh1" id="expB03">
                 <div class="box1">ブロンズ(Lv31)<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊転送の魔法陣</div>
                 </div>
@@ -335,7 +335,7 @@
                 </div>
               </div>
 
-              <div class="box training showh43" id="expB04">
+              <div class="box training showh1" id="expB04">
                 <div class="box1">ﾌﾞﾛﾝｽﾞ(Lv31) + ベテランの指南<br>
                   <div style="float: right; margin: 3px 7px 0px 0px;">＊転送の魔法陣</div>
                 </div>
@@ -414,7 +414,7 @@
               <div class="box training show" id="expC01">
                 <div class="box1">
 
-                  <select class="plane5 rare" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 rare" onchange="calc();">
                     <option value="0">鉄</option>
                     <option value="1" selected>銅</option>
                     <option value="2">銀</option>
@@ -423,19 +423,21 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 sex" onchange="calc();">
                     <option value="0">女性</option>
                     <option value="1" selected>男性</option>
                   </select>
-                  Lv
-                  <input class="plane5 lv" type="number" value="22" min="1" max="99" style="width: 40px;"
-                    onchange="calc();">
-                  <select class="plane5 cc" style="width: 35px;" onchange="calc();">
-                    <option value="0">未CCユニット</option>
-                    <option value="1">CC済/CCのない</option>
-                    <option value="2">覚醒後のユニット</option>
-                  </select>
-                  <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="22" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1">CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                  </div>
 
                 </div>
                 <div class="box2">0</div>
@@ -449,7 +451,7 @@
               <div class="box training show" id="expC02">
                 <div class="box1">
 
-                  <select class="plane5 rare" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 rare" onchange="calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -458,19 +460,21 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 sex" onchange="calc();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
-                  Lv
-                  <input class="plane5 lv" type="number" value="1" min="1" max="99" style="width: 40px;"
-                    onchange="calc();">
-                  <select class="plane5 cc" style="width: 35px;" onchange="calc();">
-                    <option value="0">未CCユニット</option>
-                    <option value="1">CC済/CCのない</option>
-                    <option value="2">覚醒後のユニット</option>
-                  </select>
-                  <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1">CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                  </div>
 
                 </div>
                 <div class="box2">0</div>
@@ -484,7 +488,7 @@
               <div class="box training show" id="expC03">
                 <div class="box1">
 
-                  <select class="plane5 rare" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 rare" onchange="calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -493,19 +497,21 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 sex" onchange="calc();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
-                  Lv
-                  <input class="plane5 lv" type="number" value="1" min="1" max="99" style="width: 40px;"
-                    onchange="calc();">
-                  <select class="plane5 cc" style="width: 35px;" onchange="calc();">
-                    <option value="0">未CCユニット</option>
-                    <option value="1">CC済/CCのない</option>
-                    <option value="2">覚醒後のユニット</option>
-                  </select>
-                  <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1">CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                  </div>
 
                 </div>
                 <div class="box2">0</div>
@@ -519,7 +525,7 @@
               <div class="box training show" id="expC04">
                 <div class="box1">
 
-                  <select class="plane5 rare" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 rare" onchange="calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -528,19 +534,21 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" style="width: 35px;" onchange="calc();">
+                  <select class="plane5 sex" onchange="calc();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
-                  Lv
-                  <input class="plane5 lv" type="number" value="1" min="1" max="99" style="width: 40px;"
-                    onchange="calc();">
-                  <select class="plane5 cc" style="width: 35px;" onchange="calc();">
-                    <option value="0">未CCユニット</option>
-                    <option value="1">CC済/CCのない</option>
-                    <option value="2">覚醒後のユニット</option>
-                  </select>
-                  <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1">CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                  </div>
 
                 </div>
                 <div class="box2">0</div>
@@ -551,9 +559,9 @@
                 </div>
               </div>
 
-              <div class="box training show" id="expS01">
+              <div class="box training showh3" id="expS01">
                 <div class="box1">
-                  鬼刃忍タチバナ
+                  強襲ドロップ
                   <select class="plane5 rare" style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
@@ -567,18 +575,62 @@
                     <option value="0" selected>女性</option>
                     <option value="1">男性</option>
                   </select>
-                  Lv
-                  <input class="plane5 lv" type="number" value="1" min="1" max="99" style="width: 40px;"
-                    onchange="calc();">
-                  <select class="plane5 cc" style="width: 35px;" onchange="calc();">
-                    <option value="0">未CCユニット</option>
-                    <option value="1">CC済/CCのない</option>
-                    <option value="2">覚醒後のユニット</option>
-                  </select>
-                  <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1">CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="calc();">
+                  </div>
+                  <div style="float: right; margin: 3px 7px 0px 0px;">
+                    翠花の領主メアリ<br>
+                    鬼刃忍タチバナ<br>
+                    鋼の重装砲兵ヴァネッサ
+                  </div>
 
                 </div>
                 <div class="box2">0</div>
+                <div class="box3">
+                  <input type="button" value="－">
+                  <input type="number" value="0" min="0" max="99">
+                  <input type="button" value="＋">
+                </div>
+              </div>
+
+              <div class="box training show" id="expS02">
+                <div class="box1">
+                  ｱｲﾄﾞﾙ/戦場アンナ
+                  <select class="plane5 rare" style="display: none;">
+                    <option value="0">鉄</option>
+                    <option value="1">銅</option>
+                    <option value="2">銀</option>
+                    <option value="3">金</option>
+                    <option value="4">藍</option>
+                    <option value="5">白</option>
+                    <option value="6" selected>黒</option>
+                  </select>
+                  <select class="plane5 sex" style="display: none;">
+                    <option value="0" selected>女性</option>
+                    <option value="1">男性</option>
+                  </select>
+
+                  <div class="boxnote">
+                    Lv
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
+                    <select class="plane5 cc" disabled onchange="calc();">
+                      <option value="0">未CCユニット</option>
+                      <option value="1" selected>CC済/CCのない</option>
+                      <option value="2">覚醒後のユニット</option>
+                    </select>
+                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="calc();">
+                  </div>
+
+                </div>
+                <div class="box2">2000</div>
                 <div class="box3">
                   <input type="button" value="－">
                   <input type="number" value="0" min="0" max="99">
@@ -592,10 +644,10 @@
           </div>
 
           <!-- show box -->
-          <div style="width: 30%;float: right;">
-            <div class="box" style="background-color: #244664;padding: 5px;margin-top: 20px;">
+          <div style="width: 30%; float: right;">
+            <div class="box" style="background-color: #244664; padding: 5px; margin-top: 20px;">
               目標レベルまで：
-              <div id="remainingEXP" style="font-size: 20px;font-weight: bold;">-</div>
+              <div id="remainingEXP" style="font-size: 20px; font-weight: bold;">-</div>
             </div>
           </div>
 
