--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -128,6 +128,16 @@
               <div class="box3">個数</div>
             </div>
 
+            <div class="box training" id="expWArmor1">
+              <div class="box1">白鎧</div>
+              <div class="box2">8000</div>
+              <div class="box3">
+                <input type="button" value="－">
+                <input type="number" value="0" min="0" max="99">
+                <input type="button" value="＋">
+              </div>
+            </div>
+
             <div class="box training" id="expWArmor">
               <div class="box1">白鎧×8</div>
               <div class="box2">8000</div>
@@ -414,7 +424,7 @@
               <div class="box training show" id="expC01">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
                     <option value="0">鉄</option>
                     <option value="1" selected>銅</option>
                     <option value="2">銀</option>
@@ -451,7 +461,7 @@
               <div class="box training show" id="expC02">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -488,7 +498,7 @@
               <div class="box training show" id="expC03">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -525,7 +535,7 @@
               <div class="box training show" id="expC04">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -621,7 +631,7 @@
                   <div class="boxnote">
                     Lv
                     <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" disabled onchange="calc();">
+                    <select class="plane5 cc" disabled onchange="calc();" style="color: #316ca4;">
                       <option value="0">未CCユニット</option>
                       <option value="1" selected>CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
