--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -116,7 +116,7 @@
             <div class="box">
               <div id="boxtitle" style="font-size: 18px; font-weight: bold;">育成計画</div>
               <label for="checkSariette" style="user-select: none;">
-                <input type="checkbox" id="checkSariette" onchange="switchSariette(); calc();">
+                <input type="checkbox" id="checkSariette" onchange="updateUI(true);">
                 育成の聖霊サリエット
               </label>
             </div>
@@ -130,7 +130,7 @@
 
             <div class="box training" id="expWArmor1">
               <div class="box1">白鎧</div>
-              <div class="box2">8000</div>
+              <div class="box2">1000</div>
               <div class="box3">
                 <input type="button" value="－">
                 <input type="number" value="0" min="0" max="99">
@@ -424,7 +424,7 @@
               <div class="box training show" id="expC01">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; updateUI();">
                     <option value="0">鉄</option>
                     <option value="1" selected>銅</option>
                     <option value="2">銀</option>
@@ -433,20 +433,20 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" onchange="calc();">
+                  <select class="plane5 sex" onchange="updateUI();">
                     <option value="0">女性</option>
                     <option value="1" selected>男性</option>
                   </select>
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="22" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" onchange="calc();">
+                    <input class="plane5 lv" type="number" value="22" min="1" max="99" onchange="updateUI();">
+                    <select class="plane5 cc" onchange="updateUI();">
                       <option value="0">未CCユニット</option>
                       <option value="1">CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="updateUI();">
                   </div>
 
                 </div>
@@ -461,7 +461,7 @@
               <div class="box training show" id="expC02">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; updateUI();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -470,20 +470,20 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" onchange="calc();">
+                  <select class="plane5 sex" onchange="updateUI();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" onchange="calc();">
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="updateUI();">
+                    <select class="plane5 cc" onchange="updateUI();">
                       <option value="0">未CCユニット</option>
                       <option value="1">CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="updateUI();">
                   </div>
 
                 </div>
@@ -498,7 +498,7 @@
               <div class="box training show" id="expC03">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; updateUI();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -507,20 +507,20 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" onchange="calc();">
+                  <select class="plane5 sex" onchange="updateUI();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" onchange="calc();">
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="updateUI();">
+                    <select class="plane5 cc" onchange="updateUI();">
                       <option value="0">未CCユニット</option>
                       <option value="1">CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="updateUI();">
                   </div>
 
                 </div>
@@ -535,7 +535,7 @@
               <div class="box training show" id="expC04">
                 <div class="box1">
 
-                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; calc();">
+                  <select class="plane5 rare" onchange="this.nextElementSibling.selectedIndex = 0; updateUI();">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -544,20 +544,20 @@
                     <option value="5">白</option>
                     <option value="6">黒</option>
                   </select>
-                  <select class="plane5 sex" onchange="calc();">
+                  <select class="plane5 sex" onchange="updateUI();">
                     <option value="0">女性</option>
                     <option value="1">男性</option>
                   </select>
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" onchange="calc();">
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="updateUI();">
+                    <select class="plane5 cc" onchange="updateUI();">
                       <option value="0">未CCユニット</option>
                       <option value="1">CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="ベテランの指南/同クラス加算" onchange="updateUI();">
                   </div>
 
                 </div>
@@ -588,13 +588,13 @@
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" onchange="calc();">
+                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="updateUI();">
+                    <select class="plane5 cc" onchange="updateUI();">
                       <option value="0">未CCユニット</option>
                       <option value="1">CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="updateUI();">
                   </div>
                   <div style="float: right; margin: 3px 7px 0px 0px;">
                     翠花の領主メアリ<br>
@@ -630,13 +630,13 @@
 
                   <div class="boxnote">
                     Lv
-                    <input class="plane5 lv" type="number" value="1" min="1" max="99" onchange="calc();">
-                    <select class="plane5 cc" disabled onchange="calc();" style="color: #316ca4;">
+                    <input class="plane5 lv" type="number" value="1" min="1" max="30" onchange="updateUI();">
+                    <select class="plane5 cc" disabled onchange="updateUI();" style="color: #316ca4;">
                       <option value="0">未CCユニット</option>
                       <option value="1" selected>CC済/CCのない</option>
                       <option value="2">覚醒後のユニット</option>
                     </select>
-                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="calc();">
+                    <input class="plane5 cbonus" type="checkbox" title="同クラス加算" onchange="updateUI();">
                   </div>
 
                 </div>
