--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
 
   <!-- data -->
-  <script src="./EXP/nextEXP.js"></script>
+  <script src="./script/nextEXP.js"></script>
 
   <!-- script -->
   <script src="./script/AigisEXP.js"></script>
