--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -133,7 +133,7 @@
               <div class="box2">1000</div>
               <div class="box3">
                 <input type="button" value="－">
-                <input type="number" value="0" min="0" max="99">
+                <input class="count" type="number" value="0" min="0" max="99">
                 <input type="button" value="＋">
               </div>
             </div>
@@ -143,7 +143,7 @@
               <div class="box2">8000</div>
               <div class="box3">
                 <input type="button" value="－">
-                <input type="number" value="0" min="0" max="99">
+                <input class="count" type="number" value="0" min="0" max="99">
                 <input type="button" value="＋">
               </div>
             </div>
@@ -153,7 +153,7 @@
               <div class="box2">40000</div>
               <div class="box3">
                 <input type="button" value="－">
-                <input type="number" value="0" min="0" max="99">
+                <input class="count" type="number" value="0" min="0" max="99">
                 <input type="button" value="＋">
               </div>
             </div>
@@ -173,7 +173,7 @@
                 <div class="box2">4000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -184,7 +184,7 @@
                 <div class="box2">1750</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -195,7 +195,7 @@
                 <div class="box2">18000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -206,7 +206,7 @@
                 <div class="box2">19000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -217,7 +217,7 @@
                 <div class="box2">19000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -228,7 +228,7 @@
                 <div class="box2">20000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -239,7 +239,7 @@
                 <div class="box2">18000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -250,7 +250,7 @@
                 <div class="box2">10000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -272,7 +272,7 @@
                 <div class="box2">16000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -282,7 +282,7 @@
                 <div class="box2">18560</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -292,7 +292,7 @@
                 <div class="box2">19040</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -316,7 +316,7 @@
                 <div class="box2">235</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -328,7 +328,7 @@
                 <div class="box2">265</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -340,7 +340,7 @@
                 <div class="box2">220</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -352,7 +352,7 @@
                 <div class="box2">250</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -371,40 +371,44 @@
 
               <div class="box training show" id="expFree01">
                 <div class="box1">【自由欄1】</div>
-                <div class="box2"> <input type="number" value="0" min="0"> </div>
+                <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
+                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
 
               <div class="box training show" id="expFree02">
                 <div class="box1">【自由欄2】</div>
-                <div class="box2"> <input type="number" value="0" min="0"> </div>
+                <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
+                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
 
               <div class="box training show" id="expFree03">
                 <div class="box1">【自由欄3】</div>
-                <div class="box2"> <input type="number" value="0" min="0"> </div>
+                <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
+                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
 
               <div class="box training show" id="expFree04">
                 <div class="box1">【自由欄4】</div>
-                <div class="box2"> <input type="number" value="0" min="0"> </div>
+                <div class="box2"> <input class="freeExp" type="number" value="0" min="0"
+                    title="サリエット有りの人は1.1倍の値を入力してください。"> </div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -453,7 +457,7 @@
                 <div class="box2">0</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -490,7 +494,7 @@
                 <div class="box2">0</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -527,7 +531,7 @@
                 <div class="box2">0</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -564,7 +568,7 @@
                 <div class="box2">0</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -606,7 +610,7 @@
                 <div class="box2">0</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
@@ -643,7 +647,7 @@
                 <div class="box2">2000</div>
                 <div class="box3">
                   <input type="button" value="－">
-                  <input type="number" value="0" min="0" max="99">
+                  <input class="count" type="number" value="0" min="0" max="99">
                   <input type="button" value="＋">
                 </div>
               </div>
