AigisChecker add base64 url

--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -6,6 +6,8 @@
   <title>千年戦争アイギス　ユニット所持チェッカー＋</title>
   <!-- jq -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- lz-string -->
+  <script src="./script/lz-string.js"></script>
 
   <!-- data -->
   <script src="./script/rawCardsList.js"></script>
